--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -61,35 +61,34 @@
       "cell_type": "code",
       "source": [
         "file = \"https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_train.csv\"\n",
-        "#Import statements\n",
+        "## Import statements\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "from prophet import Prophet\n",
         "\n",
-        "# Import the dataset of #of taxi trips each hour in New York City,\n",
+        "## Import the dataset of #of taxi trips each hour in New York City,\n",
         "trip = pd.read_csv(file)\n",
         "\n",
-        "# Keep only the dates and the y value\n",
+        "## Keep only the dates and the y value\n",
         "trip = trip[['Timestamp','trips']]\n",
-        "print('->trip.Timestamp (before) dtype: ', trip.Timestamp.dtype)\n",
+        "#print('->trip.Timestamp (before) dtype: ', trip.Timestamp.dtype)\n",
         "\n",
-        "# Format the date (Timestamp\n",
+        "## Format the date (Timestamp\n",
         "trip.Timestamp = pd.to_datetime(trip.Timestamp)\n",
-        "print('->trip.Timestamp (after) dtype: ', trip.Timestamp.dtype)\n",
+        "#print('->trip.Timestamp (after) dtype: ', trip.Timestamp.dtype)\n",
         "\n",
         "# Prophet format using column ds and y\n",
         "trip=trip.rename(columns={'Timestamp':'ds','trips':'y'})\n",
-        "trip.head()"
+        "#trip.head()"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "wHSubD68dSqI",
         "outputId": "69fc4ff4-7635-4b94-88fa-f660b35eaf31"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,20 +396,19 @@
     {
       "cell_type": "code",
       "source": [
-        "import plotly.express as px\n",
-        "fig = px.line(trip, x='ds', y='y')\n",
-        "fig.show()"
+        "#import plotly.express as px\n",
+        "#fig = px.line(trip, x='ds', y='y')\n",
+        "#fig.show()"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
         "id": "oUWpBfDSfXFJ",
         "outputId": "5e2dbdfe-3f93-4939-a990-f658ab6d0a21"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -476,7 +474,7 @@
         "id": "zy3-VtXCgv2w",
         "outputId": "ca437d50-d6a5-4f89-d7d2-fe6c4eaeb556"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,8 +515,8 @@
       "cell_type": "code",
       "source": [
         "future = modelFit.make_future_dataframe(periods=744, freq='h', include_history=False)\n",
-        "print('future.shape: ', future.shape)\n",
-        "future.tail()"
+        "#print('future.shape: ', future.shape)\n",
+        "#future.tail()"
       ],
       "metadata": {
         "colab": {
@@ -528,7 +526,7 @@
         "id": "9nqGGyo1rKet",
         "outputId": "f825595e-c1c7-4620-e605-63975f2eaaff"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -826,14 +824,14 @@
         "id": "aS1QGBZ5g-GS",
         "collapsed": true
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "pred = forecast.yhat.tolist()\n",
-        "print(pred)"
+        "#print(pred)"
       ],
       "metadata": {
         "colab": {
@@ -842,7 +840,7 @@
         "id": "a7iJzDMgioTn",
         "outputId": "7291a5c9-edbf-4744-df85-886883cfffd6"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -867,7 +865,7 @@
       "source": [
         "negative_pred = [(ind, val) \\\n",
         "                 for ind, val in enumerate(pred) if val<0]\n",
-        "print ('Nb of negative values:', len(negative_pred))\n",
+        "#print ('Nb of negative values:', len(negative_pred))\n",
         "#negative_pred"
       ],
       "metadata": {
@@ -877,7 +875,7 @@
         "id": "S7f_jREHlLLK",
         "outputId": "dd04c7c3-efce-4522-d91a-9b37a274a393"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -901,7 +899,7 @@
       "cell_type": "code",
       "source": [
         "pred = [max(min(trip.y), val) for val in pred]\n",
-        "print(pred)"
+        "#print(pred)"
       ],
       "metadata": {
         "colab": {
@@ -910,7 +908,7 @@
         "id": "u5LUFLVintr8",
         "outputId": "e9ce3dee-68f5-4ba7-e027-a6ddb4f824e5"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1423,7 +1421,7 @@
         "collapsed": true,
         "id": "Jmk22G8oUTCd"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1455,7 +1453,7 @@
         "collapsed": true,
         "id": "FnHK9YUK1XZ0"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1471,7 +1469,7 @@
           "height": 263
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1538,7 +1536,7 @@
       "metadata": {
         "id": "GnQRvggVT0st"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1562,7 +1560,7 @@
         "id": "zdcVEDqZTWC_",
         "outputId": "50198af5-dc08-4015-80d2-c42c99c1d92a"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1590,7 +1588,7 @@
         "id": "ZkgAHjyiTbJW",
         "outputId": "82d309c6-3f2b-4845-c188-dd323d7a10fe"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1619,7 +1617,7 @@
         "id": "76zboMKjTcbm",
         "outputId": "89a3955f-7568-4aa5-ddc3-efa6c3875b75"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1646,7 +1644,7 @@
         "id": "A3jPIz0oTcJH",
         "outputId": "075c9a9f-1ed4-4ed8-e353-e0bf285d8091"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1672,7 +1670,7 @@
         "id": "tGvvndpRThm2",
         "outputId": "38361e1a-a1ba-40eb-a2d0-e0686bc9343d"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1698,7 +1696,7 @@
         "id": "jkdsEr2hTg--",
         "outputId": "cc260245-34ce-46ef-b416-1cb56e1fbd01"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
